--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <button id="start-btn">Iniciar Reconocimiento de Voz</button>
-    <p id="listening-indicator" style="display: none;">Escuchando...</p>
+    <p id="listening-indicator" style="display: none;">Escuchando</p>
+    <p id="textoRec" style ="display: flex;">...</p>
     <script src="reconocimientoVoz.js"></script>
 </body>
 </html>
