--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <button id="start-btn">Iniciar Reconocimiento de Voz</button>
     <p id="listening-indicator" style="display: none;">Escuchando</p>
-    <p id="textoRec" style ="display: flex;">...</p>
+    <div id="etiqueta"> <p id="textoRec" style ="display: flex;">...</p></div>
+   
     <script src="reconocimientoVoz.js"></script>
 </body>
 </html>
